--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.12.0",
     "react-masonry-css": "^1.0.16",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
